@@ -4,6 +4,7 @@ Version 2.1-0
 =============
 NEW FEATURES
 - Add of the function bmdplotwithgradient()
+- Add of the function ecdfquantileplot()
 
 
 Version 2.0-1 
